--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -24,4 +24,8 @@
   .footer-logo {
     width: 20%; 
   }
+
+  .footer-section {
+    height: 160px;
+  }
 }
