--- a/sass/layout/_landing.scss
+++ b/sass/layout/_landing.scss
@@ -21,7 +21,7 @@ $section-height: 770px;
 
 /* ------------ Main Landing --------------------------------------------------------------------*/
 .landing-text {
-  margin: $section-height/3 auto 0 auto;
+  margin: calc($section-height/3) auto 0 auto;
   text-align: center;
 
   p {
